# cowork-console

./: .gitignore  pyproject.toml
backend/: bus_bridge.py  main.py  teammates.json  test_bus_bridge.py  test_teammates.py
backend/security/: __init__.py  paths.py
comms/: cli.py
docs/: live-messaging-channel.md
docs/proposals/: 2026-05-10-per-agent-db-and-embedding-format.md
docs/ux/: design-sources.md  sop-visual-feedback.md
extensions/ui/: README.md
extensions/ui/backend/: main.py
extensions/ui/frontend/: .gitignore  domscribe.config.json  package.json  vite.config.ts
extensions/ui/frontend/public/design-refs/: README.md
extensions/ui/frontend/src/lib/: types.ts
extensions/ui/frontend/src/lib/recipes/: HeartbeatTile.recipe.tsx  StatePulseRail.recipe.tsx  TeammateAvatar.recipe.tsx  index.ts  tokens.ts
extensions/ui/frontend/tests/: activity-panel.spec.ts  perf-dashboard.spec.ts
frontend/: index.html  main.tsx  package-lock.json  package.json  styles.css  tsconfig.json
frontend/src/lib/recipes/: README.md
frontend/tests/: team-roster.spec.ts  teammates-demo.spec.ts
