[project]
name = "cowork-console-backend"
version = "0.1.0"
description = "Team-coord backend for cowork-console. Serves the canonical teammate roster + heartbeat stream consumed by the React TeammateAvatar / StatePulseRail / HeartbeatTile recipes."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "httpx>=0.27",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "comms*"]
